# CasaPhaseRef

./: .gitignore  .pre-commit-config.yaml  CASA_Phase_Ref_User_Manual.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: example-phase-ref.yaml  example-vlbi-fringe-fit.yaml
docs/: configuration.md  phase-referencing-concepts.md  quickstart.md  troubleshooting.md
scripts/: run-in-casa.py
src/casa_phase_ref/: __init__.py  calibration_utils.py  casa_runtime.py  cli.py  config.py  errors.py  pipeline.py  run_context.py  validation.py
tests/: conftest.py
tests/integration/: test_casa_runtime_available.py  test_real_ms_smoke.py
tests/unit/: test_cli.py  test_config.py  test_pipeline_calls.py  test_validation.py
