[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "casa-phase-ref"
version = "0.2.0"
description = "Config-driven CASA phase-referencing calibration and imaging pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "John Hoar", email = "johnshoar@gmail.com" }
]
keywords = ["CASA", "radio astronomy", "interferometry", "phase referencing", "calibration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "build>=1.2",
  "twine>=5.0",
]
casa = [
  "casatasks",
  "casatools",
]

[project.scripts]
casa-phase-ref = "casa_phase_ref.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests requiring CASA or real Measurement Sets",
  "casa: tests requiring casatasks/casatools",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
